# folderHelp

./: CMakeLists.txt  config.hpp  exec.sh  main.cpp
src/: config.hpp  main.cpp
